--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.4",
     "next": "13.3.0",
+    "next-images": "^1.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.0",
