--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "framer-motion": "^10.12.12",
     "next": "13.3.0",
     "next-images": "^1.8.5",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.62.0",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/aos": "^3.0.4"
+    "@types/aos": "^3.0.4",
+    "@types/nprogress": "^0.2.0"
   }
 }
